# HttpWard

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  requirements.txt  strategies.yml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
docs/: config.schema.json  configuration-examples.md  configuration.md  extensions-guide.md  extensions-migration-guide.md  index.md  middleware-pipeline.md
docs/configuration/: configuration-examples.md  configuration.md
docs/stylesheets/: extra.css
httpward/: Cargo.toml
httpward-core/: Cargo.toml
httpward-core/assets/: error.html
httpward-core/src/: lib.rs  middleware_config_ext.rs  module_export.rs  module_logging.rs
httpward-core/src/config/: global.rs  loader.rs  mod.rs  site.rs  strategy.rs
httpward-core/src/config/strategy/: off_tests.rs
httpward-core/src/core/: content_type.rs  context.rs  errors.rs  mod.rs
httpward-core/src/core/context/: context.rs  extensions.rs  extensions_integration_tests.rs  mod.rs
httpward-core/src/core/error/: errors.rs
httpward-core/src/core/server_models/: mod.rs  server_instance.rs  site_manager.rs  strategy_resolver.rs
httpward-core/src/core/server_models/strategy_resolver/tests/: comprehensive_inheritance_tests.rs  hierarchical_inheritance_tests.rs  off_inheritance_tests.rs  user_scenario_test.rs
httpward-core/src/error/: error_handler.rs
httpward-core/src/httpward_middleware/: adapter.rs  context.rs  dependency_error.rs  layer.rs  middleware_trait.rs  mod.rs  next.rs  pipe.rs  tests.rs  types.rs
httpward-core/src/httpward_middleware/layers/: log.rs
httpward-core/src/middleware/: enricher.rs  log.rs  logger_middleware.rs  mod.rs  pipe.rs  request_enricher.rs
httpward-core/src/middleware/basic/: mod.rs  response_enricher.rs
httpward-core/src/middleware/core/: content_type.rs  context.rs  middleware.rs  mod.rs
httpward-core/src/middleware/route/: matcher.rs  mod.rs  proxy.rs  route.rs  static_files.rs  websocket.rs
httpward-core/src/middleware_config_ext/: tests.rs
httpward-docs/: Cargo.toml
httpward-docs/src/: main.rs
httpward-modules/httpward_block_gateway/: Cargo.toml
httpward-modules/httpward_block_gateway/src/: httpward_block_gateway_layer.rs  lib.rs
httpward-modules/httpward_identity_session_module/: Cargo.toml
httpward-modules/httpward_identity_session_module/src/: httpward_identity_session_layer.rs  lib.rs
httpward-modules/httpward_identity_session_module/src/core/: httpward_identity_session_config.rs  httpward_identity_session_context.rs  mod.rs
httpward-modules/httpward_log_module/: Cargo.toml
httpward-modules/httpward_log_module/src/: httpward_log_layer.rs  lib.rs
httpward-modules/httpward_rate_limit_module/: Cargo.toml
httpward-modules/httpward_rate_limit_module/src/: httpward_rate_limit_layer.rs  lib.rs
httpward-modules/httpward_rate_limit_module/src/core/: httpward_rate_limit_config.rs  httpward_rate_limit_context.rs  mod.rs  rate_limit_manager.rs  rate_limiter.rs
httpward-modules/httpward_rate_limit_module/tests/: rate_limit_analytics_integration.rs  rate_limit_strategy_integration_tests.rs
httpward-plugins/httpward_log_plugin/: Cargo.toml
httpward-plugins/httpward_log_plugin/src/: lib.rs
httpward/assets/: error.html
httpward/src/: main.rs
httpward/src/core/: mod.rs
httpward/src/core/error/: error_handler.rs  mod.rs
httpward/src/core/middleware/: mod.rs
httpward/src/core/middleware/basic/: dynamic_module_loader.rs  error_handler.rs  log.rs  middleware_global_module_storage.rs  middleware_module_instance.rs  middleware_module_load_manager.rs  mod.rs  module_loader.rs  plugin_loader.rs  request_enricher.rs  response_enricher.rs
httpward/src/core/middleware/route/: matcher.rs  mod.rs  proxy.rs  route.rs  static_files.rs  websocket.rs
httpward/src/pipeline/: pipeline.rs
httpward/src/runtime/: listener.rs  mod.rs  server_instance.rs  server_plan.rs  tls_provisioner.rs
httpward/src/server/: http_server.rs  manager.rs  mod.rs  tls.rs  tls_resolver.rs
httpward/src/server/tls/: domain_store.rs  mod.rs  tls.rs  tls_watcher.rs
src/: main.rs
src/config/: global.rs  loader.rs  mod.rs  site.rs
