edition = "2024"
rust-version = "1.93.1"

[workspace]
members = [
    "httpward",
    "httpward-docs",
    "httpward-core"
]

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.3"
rama = { version = "0.2", features = ["http-full", "rustls"] }
rama-tls-rustls = "0.2"
wildmatch = "2.1"
serde_json = "1.0"
schemars = { version = "1.2.1", features = ["preserve_order"] }

resolver = "0.1.3"
