edition = "2024"
rust-version = "1.93.1"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2"
repository = "https://github.com/ZEREX222/HttpWard"

[workspace]
members = [
    "httpward",
    "httpward-docs",
    "httpward-core",
    "httpward-modules/httpward_log_module"
]

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.3"
rama = { version = "0.2", features = ["http-full", "rustls"] }
rama-tls-rustls = "0.2"
wildmatch = "2.1"
serde_json = "1.0"
schemars = { version = "1.2.1", features = ["preserve_order"] }
parking_lot = "0.12"

resolver = "0.1.3"
