[workspace]
resolver = "3"
members = [
    "httpward",
    "httpward-docs",
    "httpward-core",
    "httpward-modules/httpward_log_module",
    "httpward-modules/httpward_rate_limit_module",
    "httpward-modules/httpward_block_gateway"
]

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.3"
rama = { version = "0.2", features = ["http-full", "rustls"] }
rama-tls-rustls = "0.2"
wildmatch = "2.1"
serde_json = "1.0"
schemars = { version = "1.2.1", features = ["preserve_order"] }
parking_lot = "0.12"
resolver = "0.1.3"
httpward-core = { version = "0.0.1-alpha.1", path = "./httpward-core" }
httpward_log_module = { version = "0.0.1-alpha.1", path = "./httpward-modules/httpward_log_module" }
httpward_rate_limit_module = { version = "0.0.1-alpha.1", path = "./httpward-modules/httpward_rate_limit_module" }
httpward_block_gateway = { version = "0.0.1-alpha.1", path = "./httpward-modules/httpward_block_gateway" }

[profile.dev]
debug = true
