[lib]
name = "httpward_core"
# crate-type = ["cdylib"]

[package]
name = "httpward-core"
version = "0.0.1"
edition = "2024"


[dependencies]
serde_json = { workspace = true }
schemars= { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
glob = "0.3"
rama = { workspace = true }
async-trait = "0.1"
matchit = "0.9"
regex = "1.12"
thiserror = "2.0"





