[lib]
name = "httpward_core"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2"
repository = "https://github.com/ZEREX222/HttpWard"
# crate-type = ["cdylib"]

[package]
name = "httpward-core"
version = "0.0.1-alpha.1"
edition = "2024"


[dependencies]
serde_json = { workspace = true }
schemars= { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
glob = "0.3"
rama = { workspace = true }
async-trait = "0.1"
matchit = "0.9"
regex = "1.12"
thiserror = "2.0"
parking_lot = { workspace = true }





