[package]
name = "httpward-core"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.93.1"
authors = ["ZEREX"]
description = "HttpWard core library providing the fundamental components for building high-performance HTTP reverse proxies with advanced routing, middleware system, and security features."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "rust", "cli"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "httpward_core"
# crate-type = ["cdylib"]


[dependencies]
serde_json = { workspace = true }
schemars= { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
glob = "0.3"
rama = { workspace = true }
async-trait = "0.1"
matchit = "0.9"
regex = "1.12"
thiserror = "2.0"
paste = "1.0"

[dev-dependencies]
cargo-husky = "1.5"



