[package]
name = "httpward-docs"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"

[dependencies]
serde_json = { workspace = true }
schemars= { workspace = true }
httpward-core = { path = "../httpward-core" }

[dev-dependencies]
cargo-husky = "1.5"
