[package]
name = "httpward"
version = "0.0.1"
edition = "2024"
rust-version = "1.93.1"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2"
repository = "https://github.com/ZEREX222/HttpWard"

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http-body-util = { workspace = true }
tracing-subscriber = { workspace = true }
httpward-core = { path = "../httpward-core" }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rcgen = "0.14"
tls-parser = "0.11"
sha1 = "0.10"
log = "0.4.29"

[dev-dependencies]

[features]
default = []

[profile.dev]
debug = true

