[package]
name = "httpward"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.93.1"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "rust", "cli"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { workspace = true }
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rama = { workspace = true }
rama-tls-rustls = { workspace = true }
wildmatch = { workspace = true }
httpward-core = { workspace = true }
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
notify = "8.2"
url = "2.2"
thiserror = "2.0"
base64 = "0.22"
sha1 = "0.10"
http = "1.4"
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
libloading = "0.9"
httpward_log_module = { workspace = true, optional = true }
httpward_rate_limit_module = { workspace = true, optional = true }
httpward_block_gateway = { workspace = true, optional = true }

[dev-dependencies]
cargo-husky = "1.5"

[features]
default = []
static_modules = ["httpward_log_module", "httpward_rate_limit_module", "httpward_block_gateway"]
dynamic_modules = []

