[package]
name = "httpward_block_gateway"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard block gateway module — reads rate-limit check results from context and returns an error response when a request is blocked."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "rate-limit", "gateway"]
categories = ["network-programming", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpward-core = { workspace = true }
httpward_rate_limit_module = { workspace = true }
async-trait = "0.1"
rama = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
cargo-husky = "1.5"

