[package]
name = "httpward_log_module"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard is a lightweight, high-performance L7 reverse proxy written in Rust, focused on strong security (WAF, rate limiting, DDoS mitigation), intelligent caching, flexible virtual host routing, and extremely low resource usage."
license = "MPL-2"
repository = "https://github.com/ZEREX222/HttpWard"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpward-core = { path = "../../httpward-core" }
async-trait = "0.1"
rama = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
