[package]
name = "httpward_log_module"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard logging module providing structured request/response logging capabilities with configurable log levels and output formats for the HttpWard reverse proxy."
license = "MPL-2"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "rust", "cli"]
categories = ["network-programming", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpward-core = { path = "../../httpward-core" }
async-trait = "0.1"
rama = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
