[package]
name = "httpward_log_module"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard logging module providing structured request/response logging capabilities with configurable log levels and output formats for the HttpWard reverse proxy."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "rust", "cli"]
categories = ["network-programming", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpward-core = { workspace = true }
async-trait = "0.1"
rama = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
cargo-husky = "1.5"

[package.metadata.cargo-husky]
pre-commit = [
    "cargo fmt --all -- --check",
    "cargo clippy --all-targets --all-features -- -D warnings"
]
