[package]
name = "httpward_rate_limit_module"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["ZEREX"]
description = "HttpWard rate limit module providing request throttling and fingerprint-aware limiting capabilities for the HttpWard reverse proxy."
license = "MPL-2.0"
repository = "https://github.com/ZEREX222/HttpWard"
homepage = "https://zerex222.github.io/HttpWard/"
documentation = "https://zerex222.github.io/HttpWard/"
keywords = ["http", "reverse-proxy", "waf", "authentication", "session"]
categories = ["network-programming", "command-line-utilities", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpward-core = { workspace = true }
async-trait = "0.1"
rama = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
